--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
             color: #3b82f6;
             border-bottom: 2px solid #3b82f6;
         }
+
+        /* 폰트 크기 조절용 */
+        .text-base-custom { font-size: var(--base-font-size, 14px); }
+        .text-title-custom { font-size: var(--title-font-size, 18px); }
     </style>
 </head>
-<body class="selection:bg-blue-500/30">
+<body class="selection:bg-blue-500/30" :style="{'--base-font-size': fontSize + 'px', '--title-font-size': (fontSize + 4) + 'px'}">
     <div id="app" class="max-w-4xl mx-auto min-h-screen flex flex-col pb-20">
         <div class="scanline"></div>
 
@@ -122,10 +126,10 @@
         </header>
 
         <!-- 탭 네비게이션 -->
-        <nav class="px-6 md:px-10 border-b border-white/5 flex gap-8 mb-8">
+        <nav class="px-6 md:px-10 border-b border-white/5 flex gap-6 mb-8 overflow-x-auto hide-scrollbar scroll-smooth">
             <button v-for="tab in tabs" :key="tab.id"
                 @click="currentTab = tab.id"
-                :class="['pb-4 text-sm font-orbitron uppercase tracking-widest transition-colors relative', 
+                :class="['pb-4 text-[11px] font-orbitron uppercase tracking-widest transition-colors relative whitespace-nowrap', 
                          currentTab === tab.id ? 'text-blue-500' : 'text-gray-500 hover:text-gray-300']">
                 {{ tab.name }}
                 <div v-if="currentTab === tab.id" class="absolute bottom-0 left-0 w-full h-[2px] bg-blue-500 shadow-[0_0_8px_rgba(59,130,246,0.6)]"></div>
@@ -133,7 +137,7 @@
         </nav>
 
         <!-- 검색 및 필터 섹션 -->
-        <div v-if="currentTab === 'korean_history'" class="px-6 md:px-10 mb-8">
+        <div v-if="isDataTab" class="px-6 md:px-10 mb-8">
             <div class="status-box p-4 md:p-6 flex flex-col lg:flex-row gap-4 items-center">
                 <!-- 커스텀 검색창 -->
                 <div class="relative flex-1 w-full">
@@ -162,9 +166,10 @@
         </div>
 
         <!-- 한국사 탭 콘텐츠 -->
-        <main v-if="currentTab === 'korean_history'" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
-            <div v-for="(item, idx) in filteredList" :key="idx" 
-                class="cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[220px]">
+        <main v-if="isDataTab" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div v-for="(item, idx) in sortedFilteredList" :key="item.id" 
+                @click="incrementViewCount(item)"
+                class="cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[220px] cursor-pointer">
                 
                 <div>
                     <!-- 카드 헤더 -->
@@ -173,15 +178,18 @@
                             <span class="text-[10px] uppercase tracking-tighter text-gray-500 font-medium">
                                 {{ item.시대 }} | {{ item.세부 }}
                             </span>
-                            <h2 class="text-xl font-bold group-hover:text-blue-400 transition-colors">{{ item.제목 }}</h2>
+                            <h2 class="font-bold group-hover:text-blue-400 transition-colors text-title-custom">{{ item.제목 }}</h2>
                         </div>
-                        <span class="text-[10px] font-orbitron text-blue-500 uppercase tracking-widest">{{ item.분류 }}</span>
+                        <div class="flex flex-col items-end gap-1">
+                            <span class="text-[10px] font-orbitron text-blue-500 uppercase tracking-widest">{{ item.분류 }}</span>
+                            <span v-if="getViewCount(item.id) > 0" class="text-[9px] font-orbitron text-green-500/60">ACCESS: {{ getViewCount(item.id) }}</span>
+                        </div>
                     </div>
 
                     <!-- 태그 영역 -->
                     <div class="flex flex-wrap gap-2 mt-4">
                         <span v-for="(tag, tIdx) in splitContent(item.내용)" :key="tIdx"
-                            class="px-3 py-1 bg-blue-500/5 border border-blue-500/20 rounded text-[11px] text-blue-400 font-medium">
+                            class="px-3 py-1 bg-blue-500/5 border border-blue-500/20 rounded font-medium text-base-custom text-blue-400">
                             #{{ tag.trim() }}
                         </span>
                     </div>
@@ -205,6 +213,37 @@
                 <button @click="resetFilters" class="mt-4 text-blue-500 text-xs font-orbitron uppercase tracking-widest border border-blue-500/30 px-4 py-2 rounded-full hover:bg-blue-500/10 transition-colors">
                     Reset Query
                 </button>
+            </div>
+        </main>
+
+        <!-- 설정 탭 -->
+        <main v-else-if="currentTab === 'settings'" class="px-6 md:px-10">
+            <div class="cyber-card p-8 rounded-2xl">
+                <h3 class="text-xl font-orbitron text-blue-500 mb-6 uppercase tracking-widest">System Configuration</h3>
+                
+                <div class="space-y-8">
+                    <!-- 폰트 크기 조절 -->
+                    <div class="space-y-4">
+                        <div class="flex justify-between items-center">
+                            <label class="text-sm font-orbitron text-gray-400 uppercase tracking-wider">Font Scaling</label>
+                            <span class="text-blue-500 font-orbitron">{{ fontSize }}px</span>
+                        </div>
+                        <input type="range" v-model="fontSize" min="12" max="24" step="1"
+                            class="w-full h-1 bg-gray-800 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                        <div class="flex justify-between text-[10px] text-gray-600 font-orbitron">
+                            <span>MIN (12PX)</span>
+                            <span>MAX (24PX)</span>
+                        </div>
+                    </div>
+
+                    <!-- 통계 초기화 -->
+                    <div class="pt-6 border-t border-white/5">
+                        <label class="text-sm font-orbitron text-gray-400 uppercase tracking-wider mb-4 block">Data Management</label>
+                        <button @click="clearStats" class="px-4 py-2 border border-red-500/30 text-red-500 text-xs font-orbitron uppercase tracking-widest rounded hover:bg-red-500/10 transition-all">
+                            Clear Access Logs
+                        </button>
+                    </div>
+                </div>
             </div>
         </main>
 
@@ -243,11 +282,19 @@
                 const selectedCategory = ref('전체');
                 const showScrollTop = ref(false);
                 const currentTab = ref('korean_history');
+                const fontSize = ref(localStorage.getItem('sigma-font-size') || 14);
+                const viewCounts = ref(JSON.parse(localStorage.getItem('sigma-view-counts') || '{}'));
 
                 const tabs = ref([
-                    { id: 'korean_history', name: '한국사 (KOR History)' },
-                    { id: 'world_history', name: '세계사 (World History)' },
-                    { id: 'settings', name: '설정 (System Settings)' }
+                    { id: 'korean_history', name: '한국사' },
+                    { id: 'criminal_law_general', name: '형법 총론' },
+                    { id: 'criminal_law_special', name: '형법 각론' },
+                    { id: 'criminal_procedure', name: '형사소송법' },
+                    { id: 'constitutional_law', name: '헌법' },
+                    { id: 'info_security', name: '정보보호론' },
+                    { id: 'network_security', name: '네트워크보안' },
+                    { id: 'software_engineering', name: '소프트웨어공학' },
+                    { id: 'settings', name: '설정' }
                 ]);
 
                 const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQE3ia0nwvZ99-e5SF707qTXOq1Vttc8urdPis0KiL7pHfduNdFawGElyYum3wrtl3yzHMdtSw5erix/pub?output=csv';
@@ -261,7 +308,13 @@
                             header: true,
                             skipEmptyLines: true,
                             complete: (results) => {
-                                items.value = results.data.filter(row => row['제목']);
+                                // id가 없는 데이터에 고유 id 부여
+                                items.value = results.data
+                                    .filter(row => row['제목'])
+                                    .map((row, index) => ({
+                                        ...row,
+                                        id: row['제목'] + '_' + row['시대'] + '_' + index
+                                    }));
                                 loading.value = false;
                             }
                         });
@@ -274,8 +327,10 @@
                 const uniqueEras = computed(() => [...new Set(items.value.map(i => i['시대']))].filter(Boolean));
                 const uniqueCategories = computed(() => [...new Set(items.value.map(i => i['분류']))].filter(Boolean));
 
-                const filteredList = computed(() => {
-                    return items.value.filter(item => {
+                const isDataTab = computed(() => ['korean_history', 'criminal_law_general', 'criminal_law_special', 'criminal_procedure', 'constitutional_law', 'info_security', 'network_security', 'software_engineering'].includes(currentTab.value));
+
+                const sortedFilteredList = computed(() => {
+                    const filtered = items.value.filter(item => {
                         const s = searchQuery.value.toLowerCase();
                         const searchableText = `${item['시대']} ${item['세부']} ${item['분류']} ${item['제목']} ${item['내용']}`.toLowerCase();
                         const matchSearch = searchableText.includes(s);
@@ -283,20 +338,47 @@
                         const matchCat = selectedCategory.value === '전체' || item['분류'] === selectedCategory.value;
                         return matchSearch && matchEra && matchCat;
                     });
+
+                    // 터치 횟수(조회수) 순으로 내림차순 정렬
+                    return filtered.sort((a, b) => {
+                        const countA = viewCounts.value[a.id] || 0;
+                        const countB = viewCounts.value[b.id] || 0;
+                        return countB - countA;
+                    });
                 });
+
+                const incrementViewCount = (item) => {
+                    const currentCount = viewCounts.value[item.id] || 0;
+                    viewCounts.value[item.id] = currentCount + 1;
+                    localStorage.setItem('sigma-view-counts', JSON.stringify(viewCounts.value));
+                };
+
+                const getViewCount = (id) => viewCounts.value[id] || 0;
+
+                const clearStats = () => {
+                    if (confirm('모든 접속 로그(터치 횟수)를 초기화하시겠습니까?')) {
+                        viewCounts.value = {};
+                        localStorage.removeItem('sigma-view-counts');
+                    }
+                };
 
                 const splitContent = (content) => content ? content.split('/') : [];
                 const resetFilters = () => { searchQuery.value = ''; selectedEra.value = '전체'; selectedCategory.value = '전체'; };
                 const scrollToTop = () => window.scrollTo({ top: 0, behavior: 'smooth' });
                 const handleScroll = () => showScrollTop.value = window.scrollY > 300;
 
+                Vue.watch(fontSize, (newVal) => {
+                    localStorage.setItem('sigma-font-size', newVal);
+                });
+
                 onMounted(() => { fetchData(); window.addEventListener('scroll', handleScroll); });
                 onUnmounted(() => window.removeEventListener('scroll', handleScroll));
 
                 return {
                     items, loading, searchQuery, selectedEra, selectedCategory,
-                    uniqueEras, uniqueCategories, filteredList, resetFilters,
-                    showScrollTop, scrollToTop, splitContent, currentTab, tabs
+                    uniqueEras, uniqueCategories, sortedFilteredList, resetFilters,
+                    showScrollTop, scrollToTop, splitContent, currentTab, tabs,
+                    fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab
                 };
             }
         }).mount('#app');
