--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </nav>
 
         <!-- 검색 및 필터 섹션 -->
-        <div v-if="isDataTab" class="px-6 md:px-10 mb-8">
+        <div v-if="isDataTab && items.length > 0" class="px-6 md:px-10 mb-8">
             <div class="status-box p-4 md:p-6 flex flex-col lg:flex-row gap-4 items-center">
                 <!-- 커스텀 검색창 -->
                 <div class="relative flex-1 w-full">
@@ -165,7 +165,7 @@
         </div>
 
         <!-- 한국사 탭 콘텐츠 -->
-        <main v-if="isDataTab" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
+        <main v-if="isDataTab && items.length > 0" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
             <div v-for="(item, idx) in sortedFilteredList" :key="item.id" 
                 @click="incrementViewCount(item)"
                 class="cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[220px] cursor-pointer">
@@ -340,6 +340,8 @@
                 const isDataTab = computed(() => currentTab.value === 'korean_history');
 
                 const sortedFilteredList = computed(() => {
+                    if (!items.value || items.value.length === 0) return [];
+                    
                     const filtered = items.value.filter(item => {
                         const s = searchQuery.value.toLowerCase();
                         const searchableText = `${item['시대']} ${item['세부']} ${item['분류']} ${item['제목']} ${item['내용']}`.toLowerCase();
