--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="flex gap-4 w-full md:w-auto">
                 <div class="status-box flex-1 md:w-32 p-3 text-center">
                     <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">INDEXED NODES</p>
-                    <p class="text-2xl font-bold text-blue-500">{{ items.length }}</p>
+                    <p class="text-2xl font-bold text-blue-500">{{ displayCount }}</p>
                 </div>
                 <div class="status-box flex-1 md:w-32 p-3 text-center">
                     <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">SYNC INTEGRITY</p>
@@ -136,7 +136,7 @@
         </nav>
 
         <!-- 검색 및 필터 섹션 -->
-        <div v-if="isDataTab && items.length > 0" class="px-6 md:px-10 mb-8">
+        <div v-if="isDataTab && !loading" class="px-6 md:px-10 mb-8">
             <div class="status-box p-4 md:p-6 flex flex-col lg:flex-row gap-4 items-center">
                 <!-- 커스텀 검색창 -->
                 <div class="relative flex-1 w-full">
@@ -164,8 +164,14 @@
             </div>
         </div>
 
+        <!-- 콘텐츠 로딩 상태 -->
+        <main v-if="loading" class="px-6 md:px-10 py-20 text-center">
+            <div class="animate-spin rounded-full h-10 w-10 border-b-2 border-blue-500 mx-auto mb-4"></div>
+            <p class="text-gray-500 font-orbitron text-xs tracking-widest uppercase">Synchronizing Nodes...</p>
+        </main>
+
         <!-- 한국사 탭 콘텐츠 -->
-        <main v-if="isDataTab && items.length > 0" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
+        <main v-else-if="isDataTab" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
             <div v-for="(item, idx) in sortedFilteredList" :key="item.id" 
                 @click="incrementViewCount(item)"
                 class="cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[220px] cursor-pointer">
@@ -339,6 +345,12 @@
 
                 const isDataTab = computed(() => currentTab.value === 'korean_history');
 
+                const displayCount = computed(() => {
+                    if (loading.value) return 0;
+                    if (!isDataTab.value) return 0;
+                    return sortedFilteredList.value.length;
+                });
+
                 const sortedFilteredList = computed(() => {
                     if (!items.value || items.value.length === 0) return [];
                     
@@ -390,7 +402,8 @@
                     items, loading, searchQuery, selectedEra, selectedCategory,
                     uniqueEras, uniqueCategories, sortedFilteredList, resetFilters,
                     showScrollTop, scrollToTop, splitContent, currentTab, tabs,
-                    fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab
+                    fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab,
+                    displayCount, fontOptions, currentFont
                 };
             }
         }).mount('#app');
