Fix: Add cache busting and refine loading/count logic

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 const fetchData = async () => {
                     loading.value = true;
                     try {
-                        const response = await fetch(csvUrl);
+                        const response = await fetch(csvUrl + '&t=' + new Date().getTime());
                         const csvText = await response.text();
                         Papa.parse(csvText, {
                             header: true,
@@ -356,8 +356,9 @@
                 const isDataTab = computed(() => currentTab.value === 'korean_history');
 
                 const displayCount = computed(() => {
+                    // 로딩 중이거나 한국사 탭이 아닐 때만 0으로 표시
                     if (loading.value) return 0;
-                    if (!isDataTab.value) return 0;
+                    if (currentTab.value !== 'korean_history') return 0;
                     return sortedFilteredList.value.length;
                 });
 
