--- a/index.html
+++ b/index.html
@@ -117,9 +117,17 @@
                     <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">INDEXED NODES</p>
                     <p class="text-2xl font-bold text-blue-500">{{ displayCount }}</p>
                 </div>
+                <!-- Mission Countdown 추가 -->
+                <div class="status-box flex-1 md:w-32 p-3 text-center border-blue-500/20">
+                    <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">MISSION D-DAY</p>
+                    <p :class="['text-2xl font-bold', dDay <= 7 ? 'text-red-500 animate-pulse' : 'text-blue-400']">
+                        {{ dDay >= 0 ? 'D-' + dDay : 'D+' + Math.abs(dDay) }}
+                    </p>
+                </div>
+                <!-- 점수 기록 (Training Rating) 추가 -->
                 <div class="status-box flex-1 md:w-32 p-3 text-center">
-                    <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">SYNC INTEGRITY</p>
-                    <p class="text-2xl font-bold text-green-500">100%</p>
+                    <p class="text-[10px] text-gray-500 uppercase font-orbitron mb-1">AVG RATING</p>
+                    <p class="text-2xl font-bold text-green-500">{{ avgScore }}%</p>
                 </div>
             </div>
         </header>
@@ -160,8 +168,40 @@
                             <option v-for="cat in uniqueCategories" :key="cat" :value="cat">{{ cat }}</option>
                         </select>
                     </div>
+                    <!-- 점수 입력 버튼 -->
+                    <button @click="showScoreInput = !showScoreInput" 
+                        class="px-4 py-3 bg-blue-500/10 border border-blue-500/30 rounded-xl text-[10px] font-orbitron text-blue-500 hover:bg-blue-500/20 transition-all whitespace-nowrap">
+                        SCORE LOG
+                    </button>
                 </div>
             </div>
+
+            <!-- 점수 입력 패널 (필터 아래) -->
+            <transition name="fade">
+                <div v-if="showScoreInput" class="status-box p-4 mt-4 border-blue-500/20 bg-blue-500/5">
+                    <div class="flex items-center justify-between gap-4">
+                        <div class="flex-1">
+                            <p class="text-[10px] text-blue-400 font-orbitron mb-2 uppercase tracking-widest">Training Performance Input</p>
+                            <div class="flex gap-2">
+                                <input type="number" v-model="newScore" placeholder="SCORE" 
+                                    class="w-full bg-black/60 border border-blue-500/30 rounded-lg py-2 px-3 text-sm focus:outline-none focus:border-blue-500"
+                                    @keyup.enter="saveScore">
+                                <button @click="saveScore" class="px-6 py-2 bg-blue-600 text-white rounded-lg text-xs font-bold font-orbitron">SAVE</button>
+                            </div>
+                        </div>
+                        <div class="w-[1px] h-12 bg-white/10"></div>
+                        <div class="text-right">
+                            <p class="text-[9px] text-gray-500 font-orbitron uppercase">Recent Records</p>
+                            <div class="flex gap-1 mt-1 justify-end overflow-x-auto max-w-[150px]">
+                                <span v-for="(s, idx) in scoreHistory.slice(0, 5)" :key="idx" 
+                                    class="text-[10px] bg-blue-500/20 text-blue-400 px-1.5 py-0.5 rounded border border-blue-500/10">
+                                    {{ s }}
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </transition>
         </div>
 
         <!-- 콘텐츠 로딩 상태 -->
@@ -288,6 +328,12 @@
                 const showScrollTop = ref(false);
                 const currentTab = ref('korean_history');
                 
+                // 새로운 상태들
+                const showScoreInput = ref(false);
+                const newScore = ref(null);
+                const scoreHistory = ref(JSON.parse(localStorage.getItem('sigma-scores') || '[]'));
+                const examDate = ref(null); // 구글 시트에서 받아올 예정
+
                 // 로컬 스토리지 데이터 안전하게 가져오기
                 const savedFontSize = localStorage.getItem('sigma-font-size');
                 const fontSize = ref(savedFontSize ? parseInt(savedFontSize) : 14);
@@ -334,9 +380,18 @@
                             header: true,
                             skipEmptyLines: true,
                             complete: (results) => {
+                                // 시험 일정 데이터 처리 (만약 시트에 '시험일자' 컬럼이 있는 데이터가 있다면)
+                                const dateRow = results.data.find(row => row['제목'] === 'NEXT_EXAM_DATE');
+                                if (dateRow && dateRow['내용']) {
+                                    examDate.value = new Date(dateRow['내용']);
+                                } else {
+                                    // 기본값 (예: 다음 한능검 시험일 2026-02-07로 임시 설정)
+                                    examDate.value = new Date('2026-02-07');
+                                }
+
                                 // id가 없는 데이터에 고유 id 부여
                                 items.value = results.data
-                                    .filter(row => row['제목'])
+                                    .filter(row => row['제목'] && row['제목'] !== 'NEXT_EXAM_DATE')
                                     .map((row, index) => ({
                                         ...row,
                                         id: row['제목'] + '_' + row['시대'] + '_' + index
@@ -348,6 +403,31 @@
                         console.error('Data sync failed:', err);
                         loading.value = false;
                     }
+                };
+
+                const dDay = computed(() => {
+                    if (!examDate.value) return 0;
+                    const today = new Date();
+                    today.setHours(0, 0, 0, 0);
+                    const diff = examDate.value - today;
+                    return Math.ceil(diff / (1000 * 60 * 60 * 24));
+                });
+
+                const avgScore = computed(() => {
+                    if (scoreHistory.value.length === 0) return 0;
+                    const sum = scoreHistory.value.reduce((a, b) => a + b, 0);
+                    return Math.round(sum / scoreHistory.value.length);
+                });
+
+                const saveScore = () => {
+                    if (newScore.value === null || newScore.value === '') return;
+                    const score = parseInt(newScore.value);
+                    if (isNaN(score)) return;
+                    
+                    scoreHistory.value.unshift(score);
+                    localStorage.setItem('sigma-scores', JSON.stringify(scoreHistory.value));
+                    newScore.value = null;
+                    showScoreInput.value = false;
                 };
 
                 const uniqueEras = computed(() => [...new Set(items.value.map(i => i['시대']))].filter(Boolean));
@@ -427,7 +507,8 @@
                     uniqueEras, uniqueCategories, sortedFilteredList, resetFilters,
                     showScrollTop, scrollToTop, splitContent, currentTab, tabs,
                     fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab,
-                    displayCount, fontOptions, currentFont
+                    displayCount, fontOptions, currentFont,
+                    showScoreInput, newScore, scoreHistory, dDay, avgScore, saveScore
                 };
             }
         }).mount('#app');
