UI: Update Header Title to INSPECTOR SIGMA 1.0 and add Police/Inspector icon

--- a/index.html
+++ b/index.html
@@ -103,8 +103,13 @@
         <header class="p-6 md:p-10 flex flex-col md:flex-row justify-between items-start md:items-center gap-6">
             <div>
                 <h1 class="text-4xl md:text-5xl font-orbitron font-bold tracking-tighter flex items-center gap-3">
-                    <span class="text-white">SIGMA</span>
-                    <span class="text-blue-500">CORE</span>
+                    <span class="text-blue-500">
+                        <svg class="w-10 h-10 md:w-12 md:h-12" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 2L4 5V11C4 16.07 7.41 20.85 12 22C16.59 20.85 20 16.07 20 11V5L12 2ZM12 7C13.1 7 14 7.9 14 9C14 10.1 13.1 11 12 11C10.9 11 10 10.1 10 9C10 7.9 10.9 7 12 7ZM17 15H7V14C7 12.34 10.33 11.5 12 11.5C13.67 11.5 17 12.34 17 14V15Z"/>
+                        </svg>
+                    </span>
+                    <span class="text-white">INSPECTOR</span>
+                    <span class="text-blue-500">SIGMA</span>
                     <span class="text-white">1.0</span>
                 </h1>
                 <p class="text-xs md:text-sm font-orbitron text-gray-500 mt-2 tracking-widest uppercase">
