--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
             <p class="text-gray-500 font-orbitron text-xs tracking-widest uppercase">Synchronizing Nodes...</p>
         </main>
 
-        <!-- 한국사 탭 콘텐츠 -->
-        <main v-else-if="currentTab === 'korean_history'" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
+        <!-- 한국사/법학 탭 콘텐츠 -->
+        <main v-else-if="isDataTab" class="px-6 md:px-10 grid grid-cols-1 md:grid-cols-2 gap-6">
             <div v-for="(item, idx) in sortedFilteredList" :key="item.id" 
                 @click="openPopup(item)"
-                :class="['cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[220px] cursor-pointer transition-all duration-300', 
+                :class="['cyber-card group p-6 rounded-2xl flex flex-col justify-between min-h-[180px] cursor-pointer transition-all duration-300', 
                          pinnedNodes.includes(item.id) ? 'border-blue-500/50 shadow-[0_0_15px_rgba(59,130,246,0.2)]' : '']">
                 
                 <div>
@@ -282,10 +282,15 @@
                     <div class="flex justify-between items-start mb-4">
                         <div class="flex flex-col gap-1">
                             <span class="text-[10px] uppercase tracking-tighter text-gray-500 font-medium">
-                                {{ item['시대 대분류'] }} | {{ item['시대 소분류'] }}
+                                <template v-if="currentTab === 'korean_history'">
+                                    {{ item['시대 대분류'] }} | {{ item['시대 소분류'] }}
+                                </template>
+                                <template v-else>
+                                    {{ item.과목분류 }}
+                                </template>
                             </span>
                             <h2 class="font-bold group-hover:text-blue-400 transition-colors text-title-custom flex items-center gap-2">
-                                {{ item.제목 }}
+                                {{ item.제목 || item.대주제 }}
                                 <svg v-if="nodeMemos[item.id]" class="w-3 h-3 text-blue-500/50" fill="currentColor" viewBox="0 0 20 20">
                                     <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" />
                                     <path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd" />
@@ -303,8 +308,8 @@
                         </div>
                     </div>
 
-                    <!-- 한국사 전용 내용 렌더링 (첫 문장 강조) -->
-                    <div class="space-y-3 mt-4 mb-6">
+                    <!-- 한국사 내용 렌더링 -->
+                    <div v-if="currentTab === 'korean_history'" class="space-y-3 mt-4 mb-2">
                         <div v-for="(line, lIdx) in splitContent(item.내용)" :key="lIdx" 
                             class="flex items-start gap-2 leading-relaxed">
                             <span class="text-blue-500 shrink-0 text-lg leading-[1.2]">•</span>
@@ -316,13 +321,14 @@
                             </span>
                         </div>
                     </div>
-
-                    <!-- 서브키워드 영역 (메인 페이지에서는 암호화 박스로 숨김) -->
-                    <div class="mt-auto">
-                        <div class="w-full h-12 bg-black/80 rounded-xl border border-white/5 flex items-center justify-center group-hover:border-blue-500/20 transition-colors">
-                            <div class="flex gap-1">
-                                <div v-for="i in 3" :key="i" class="w-1 h-1 bg-gray-800 rounded-full animate-pulse" :style="{animationDelay: (i*200)+'ms'}"></div>
-                            </div>
+                    <!-- 법학 내용 렌더링 -->
+                    <div v-else class="space-y-2 mt-4 mb-2 text-base-custom text-gray-300 leading-relaxed">
+                        <div v-for="(line, lIdx) in renderLawContent(item.내용)" :key="lIdx" 
+                            :class="['flex gap-2 transition-all duration-300', line.level > 0 ? 'border-l border-white/5' : '']"
+                            :style="{ paddingLeft: (line.level * 1.5) + 'rem' }">
+                            <span v-if="line.level === 0" class="text-blue-500 mt-1 shrink-0">▶</span>
+                            <span v-else class="text-gray-600 mt-1 shrink-0">•</span>
+                            <span class="break-keep" v-html="highlightText(line.text)"></span>
                         </div>
                     </div>
                 </div>
