--- a/index.html
+++ b/index.html
@@ -312,10 +312,12 @@
                     <div v-if="currentTab === 'korean_history'" class="space-y-3 mt-4 mb-2">
                         <div v-for="(line, lIdx) in splitContent(item.내용)" :key="lIdx" 
                             class="flex items-start gap-2 leading-relaxed">
-                            <span class="text-blue-500 shrink-0 text-lg leading-[1.2]">•</span>
+                            <!-- 번호 매기기(1.)가 아니면 불렛 포인트 표시 -->
+                            <span v-if="!isNumberedLine(line)" class="text-blue-500 shrink-0 text-lg leading-[1.2]">•</span>
                             <span :class="[
                                 'text-base-custom break-keep flex-1',
-                                lIdx === 0 ? 'text-gray-100 font-bold' : 'text-gray-500 text-[0.95em]'
+                                lIdx === 0 ? 'text-gray-100 font-bold' : 'text-gray-500 text-[0.95em]',
+                                isNumberedLine(line) ? 'ml-1' : ''
                             ]">
                                 {{ line.trim() }}
                             </span>
@@ -434,8 +436,10 @@
                             <label class="text-[10px] font-orbitron text-gray-500 uppercase tracking-widest block mb-4">Central Intelligence Data</label>
                             <div v-if="currentTab === 'korean_history'" class="space-y-4 bg-white/5 p-6 rounded-2xl border border-white/5">
                                 <div v-for="(line, lIdx) in splitContent(selectedItem.내용)" :key="lIdx" class="flex gap-3">
-                                    <span class="text-blue-500 mt-1.5 text-lg">•</span>
-                                    <p :class="['text-base md:text-lg leading-relaxed break-keep flex-1', lIdx === 0 ? 'text-gray-100 font-bold' : 'text-gray-400']">{{ line.trim() }}</p>
+                                    <span v-if="!isNumberedLine(line)" class="text-blue-500 mt-1.5 text-lg">•</span>
+                                    <p :class="['text-base md:text-lg leading-relaxed break-keep flex-1', 
+                                               lIdx === 0 ? 'text-gray-100 font-bold' : 'text-gray-400',
+                                               isNumberedLine(line) ? 'ml-1' : '']">{{ line.trim() }}</p>
                                 </div>
                                 <!-- 팝업 내 서브키워드 표시 추가 -->
                                 <div class="flex flex-wrap gap-2 mt-6 pt-4 border-t border-white/5">
@@ -806,6 +810,12 @@
 
                 const splitContent = (content) => content ? content.split('/') : [];
                 
+                // 번호 매기기(1.) 여부 확인 로직
+                const isNumberedLine = (text) => {
+                    if (!text) return false;
+                    return /^\d+\./.test(text.trim());
+                };
+                
                 // 법학 탭용 내용 렌더링 (줄바꿈 및 불렛 포인트 처리)
                 const renderLawContent = (content) => {
                     if (!content) return [];
@@ -853,11 +863,12 @@
                 return {
                     items, loading, searchQuery, selectedEra, selectedCategory,
                     uniqueEras, uniqueCategories, sortedFilteredList, resetFilters,
-                    showScrollTop, scrollToTop, splitContent, renderLawContent, highlightText, currentTab, tabs,
+                    showScrollTop, scrollToTop, splitContent, isNumberedLine, renderLawContent, highlightText, currentTab, tabs,
                     fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab,
                     displayCount, fontOptions, currentFont,
                     showScoreInput, newScore, scoreHistory, dDay, avgScore, saveScore,
-                    pinnedNodes, nodeMemos, selectedItem, togglePin, openPopup, closePopup, updateMemo
+                    pinnedNodes, nodeMemos, selectedItem, togglePin, openPopup, closePopup, updateMemo,
+                    isSyncing
                 };
             }
         }).mount('#app');
