Fix: Re-add missing helper functions to solve infinite loading caused by ReferenceError

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                 return {
                     items, loading, searchQuery, selectedEra, selectedCategory,
                     uniqueEras, uniqueCategories, sortedFilteredList, resetFilters,
-                    showScrollTop, scrollToTop, splitContent, isNumberedLine, renderLawContent, highlightText, currentTab, tabs,
+                    showScrollTop, scrollToTop, splitContent, isNumberedLine, isImportantLine, cleanText, renderLawContent, highlightText, currentTab, tabs,
                     fontSize, viewCounts, incrementViewCount, getViewCount, clearStats, isDataTab,
                     displayCount, fontOptions, currentFont,
                     showScoreInput, newScore, scoreHistory, dDay, avgScore, saveScore,
